--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         </fieldset>
         <fieldset>
          <legend>
-           Select 
+           select 
          </legend> 
           <label for="band"
           >Select - Pick one band: </label>
